--- a/bedrock/firefox/templates/firefox/ios.html
+++ b/bedrock/firefox/templates/firefox/ios.html
@@ -22,6 +22,8 @@
   {% stylesheet 'firefox_ios' %}
 {% endblock %}
 
+{% set has_widget = LANG in settings.SEND_TO_DEVICE_LOCALES %}
+
 {% block site_header %}
   {% call fxfamilynav('ios') %}
     <div class="{% if has_widget %}show-widget{% endif %}">
@@ -32,8 +34,6 @@
     </div>
   {% endcall %}
 {% endblock %}
-
-{% set has_widget = LANG in settings.SEND_TO_DEVICE_LOCALES %}
 
 {% block content %}
 <section class="section section-intro" id="intro">
@@ -51,7 +51,9 @@
         <a href="{{ firefox_ios_url('mozorg-ios_page-appstore-button') }}" data-link-type="download" data-download-os="iOS"><img src="{{ l10n_img('firefox/ios/btn-app-store.svg') }}" alt="{{ _('Download on the App Store') }}"></a>
       </p>
 
-      {{ send_to_device(platform='ios', title_text=_('Send Firefox to your iOS device'), ios_link=firefox_ios_url('mozorg-ios_page-appstore-button_sd'), spinner_color='#fff') }}
+      <div id="send-to-device-wrapper" class="hidden">
+        {{ send_to_device(platform='ios', title_text=_('Send Firefox to your iOS device'), ios_link=firefox_ios_url('mozorg-ios_page-appstore-button_sd'), spinner_color='#fff') }}
+      </div>
     </div>
 
     <p class="android-link">
@@ -89,12 +91,12 @@
         <p>{{ _('Already have an account?') }} <a href="https://support.mozilla.org/kb/how-do-i-set-up-firefox-sync" class="go">{{ _('Sign in') }}</a></p>
       </div>
 
-      <div class="fx-signed-in">
+      <div class="fx-signed-in hidden">
         <h3>{{ _('You’re already signed in!') }}</h3>
         <p><a href="{{ url('firefox.sync') }}" class="go" data-link-type="button" data-link-name="Learn more about Sync" data-cta-position="Secondary">{{ _('Learn more about Sync') }}</a></p>
       </div>
 
-      <div class="fx-ios">
+      <div class="fx-ios hidden">
         <h3>{{ _('Sync your Firefox browsing history on iOS') }}</h3>
         <p><button type="button" class="button sync-start-ios" data-button-name="Get started with Sync" data-cta-position="Secondary">{{ _('Get started with Sync') }}</button></p>
         <p><a href="{{ firefox_ios_url() }}" class="go">{{ _('Learn more in the App Store') }}</a></p>
@@ -135,7 +137,7 @@
 </section>
 {% endif %}
 
-<aside id="sync-instructions">
+<aside id="sync-instructions" class="hidden">
   <h4>{{ _('Get started with Sync') }}</h4>
   <p>{{ _('First tap the <b>tab</b> button. Then tap the %(gear_icon)s icon to start using Sync.') | format(gear_icon=high_res_img('firefox/ios/gear-icon.png', {'alt': '', 'width': '20', 'height': '20'})|safe) }}</p>
   <p><button type="button" class="btn-dismiss">{{ _('Not now') }}</button></p>
@@ -159,8 +161,5 @@
 {% endblock %}
 
 {% block js %}
-  <!--[if IE 9]>
-    {% javascript 'matchmedia_addlistener' %}
-  <![endif]-->
   {% javascript 'firefox_ios' %}
 {% endblock %}
