Stop serving JS to /firefox/channel/

--- a/bedrock/base/templates/base.html
+++ b/bedrock/base/templates/base.html
@@ -146,10 +146,33 @@
 
     </div><!-- close #outer-wrapper -->
 
+    {#
+      The logic mess below will be simplified when all pages are refactored
+      to behave well in old IE without page-specific JS.
+    #}
+    {% if OLDIEJS != True %}
+      {#
+        Unless specifically requested by current page, hide first-class
+        & page-specific JS from IE 8 and below.
+      #}
+      <!--[if !lte IE 8]><!-->
+    {% endif %}
     {% block site_js %}
       {% javascript 'common' %}
     {% endblock %}
     {% block js %}{% endblock %}
+    {% if OLDIEJS != True %}
+      <!--<![endif]-->
+
+      {#
+        Give old IE a slimmed down bundle with only jQuery, global, and
+        GTM scripts.
+      #}
+      <!--[if lte IE 8]>
+        {% javascript 'common-oldie' %}
+      <![endif]-->
+    {% endif %}
+
     {% if settings.DEV %}
       <script src="https://pontoon.mozilla.org/pontoon.js"></script>
     {% endif %}
