--- a/bedrock/firefox/templates/firefox/includes/download-button.html
+++ b/bedrock/firefox/templates/firefox/includes/download-button.html
@@ -18,6 +18,7 @@
         <li><a href="{{ plat.download_link_direct or plat.download_link }}"
                class="download-link button green"
                data-link-type="download"
+               data-download-version="{{ plat.os }}"
                {% if plat.os == 'android' %}data-download-os="Android"
                {% elif plat.os == 'ios' %}data-download-os="iOS"
                {% else %}data-download-os="Desktop"{% endif %}>{{ plat.os_arch_pretty or plat.os_pretty }}</a>
@@ -63,6 +64,8 @@
            href="{{ plat.download_link }}"{% if plat.download_link_direct %}
            data-direct-link="{{ plat.download_link_direct }}"{% endif %}
            data-link-type="download"
+           data-display-name="{{ plat.os_arch_pretty or plat.os_pretty }}"
+           data-download-version="{{ plat.os }}"
            {% if plat.os == 'android' %}data-download-os="Android"
            {% elif plat.os == 'ios' %}data-download-os="iOS"
            {% else %}data-download-os="Desktop"{% endif %}>
