Fix Bug 1297571 - Updates needed to links on https://www.mozilla.org/en-US/foundation/trademarks/policy/

--- a/bedrock/foundation/templates/foundation/trademarks/faq.html
+++ b/bedrock/foundation/templates/foundation/trademarks/faq.html
@@ -121,10 +121,7 @@
     <dt>{% trans %}Can I make a t-shirt/desktop wallpaper/baseball cap with the logo on?{% endtrans %}</dt>
     <dd><p>{% trans %}Sure, if it's just for you, or if it's for others
         and no money or other consideration changes hands (although see
-        the question about high-res versions). The Mozilla Foundation owns
-        and operates the <a href="http://store.mozilla.org/">Mozilla Store</a>
-        which sells a wide range of CDs, Guidebooks, T-shirts, and products
-        with Mozilla software and logos.
+        the question about high-res versions).
     {% endtrans %}</p></dd>
 
     <dt>{% trans %}Can I modify your logos and distribute the result?{% endtrans %}</dt>
