--- a/bedrock/firefox/templates/firefox/new/horizon/scene1.html
+++ b/bedrock/firefox/templates/firefox/new/horizon/scene1.html
@@ -44,7 +44,7 @@
             <h1 class="hide-for-refresh">{{ _('Browse Freely') }}</h1>
             <div id="refresh-firefox-wrapper">
               <h2>{{ _('Give Firefox a tune up') }}</h2>
-              <button type="button" id="refresh-firefox" data-interaction="Refresh Firefox" data-element-action="Firefox Desktop" class="button">{{ _('Refresh Firefox') }}</button>
+              <button type="button" id="refresh-firefox" data-interaction="Refresh Firefox" data-element-action="Firefox Desktop" data-button-name="Refresh Firefox" data-cta-position="Primary" class="button">{{ _('Refresh Firefox') }}</button>
               <a href="https://support.mozilla.org/kb/refresh-firefox-reset-add-ons-and-settings?utm_source=mozilla.org&amp;utm_medium=referral&amp;utm_campaign=learn-more-link" rel="external">{{ _('Learn more') }}</a>
             </div>
             <div class="desktop-latest-links-wrapper latest-links-wrapper">
