--- a/bedrock/firefox/templates/firefox/win10-welcome.html
+++ b/bedrock/firefox/templates/firefox/win10-welcome.html
@@ -49,7 +49,7 @@
   </header>
   <section class="firefox-default-cta hidden">
     {% if l10n_has_tag('win10_button_update') %}
-      <button id="set-default" type="button" class="button dark" data-button-name="Let's do it">{{ _('Let’s do it') }}</button>
+      <button id="set-default" type="button" class="button dark" data-button-name="Let's do it" data-cta-position="Primary">{{ _('Let’s do it') }}</button>
     {% endif %}
     <h2>{{ _('Make Firefox your default in 3 easy steps:') }}</h2>
     <ol>
