--- a/bedrock/mozorg/templates/mozorg/contribute/contribute-base.html
+++ b/bedrock/mozorg/templates/mozorg/contribute/contribute-base.html
@@ -43,7 +43,7 @@
               {{ _('Meet<br> Mozillians') }}
             </a></li>
             {% block contrib_nav_cta %}
-            <li class="nav-cta"><a href="{{ url('mozorg.contribute.signup') }}" data-link-type="nav" data-link-name="Get involved">{{ _('Get involved') }}</a></li>
+            <li class="nav-cta"><a href="{{ url('mozorg.contribute.signup') }}" data-link-type="nav" data-link-name="Get involved" data-cta-position="Nav">{{ _('Get involved') }}</a></li>
             {% endblock contrib_nav_cta %}
           </ul>
         </nav>
